# devicescript-stm32

./: .gitmodules  CMakeLists.txt  Makefile
boards/: regen.sh  stm32.d.ts  stm32deviceconfig.schema.json
boards/stm32l475vg/: arch.json
src/: CMakeLists.txt  dsstm.h  jd_user_config.h  main.c
